Add support for iOS OAuth Client ID
